--- a/Ejercicio_02/public/index.html
+++ b/Ejercicio_02/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/Ejercicio_02/public/css/styles.css">
     <title>Proyecto 3 JS</title>
 </head>
 <body>
