Creasion del scrpt index.js
se creo el script del index.html para la lógica que es hallar la x dependiendo en donde este

--- a/Desafio02/public/html/index.html
+++ b/Desafio02/public/html/index.html
@@ -15,5 +15,6 @@
     <button id="btnCalcular">Calcular X</button>
     <div class="resultado" id="resultado"></div>
   </div>
+  <script src="/Desafio02/public/src/index.js"></script>
 </body>
 </html>
